# Vox-Symposium

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
data/scenarios/: 00000000.json  two_test.normalized.json
src/vox_symposium/: __init__.py  audio.py  config.py  evaluation.py  livekit_participant.py  main.py  scenario.py
src/vox_symposium/models/: base.py  gemini_live.py  local_voice.py  openai_realtime.py
src/vox_symposium/models/local_backends/: __init__.py  base.py  minicpmo.py  qwen3_omni.py
