[project]
name = "vox-symposium"
version = "0.1.0"
description = "Two programmable LiveKit audio participants bridged to realtime audio models."
requires-python = ">=3.11"
dependencies = [
    "google-genai>=1.45.0",
    "livekit>=1.0.18",
    "livekit-api>=1.0.5",
    "python-dotenv>=1.0.1",
    "websockets>=13.1",
]

[project.scripts]
vox-symposium = "vox_symposium.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vox_symposium"]

[tool.pyright]
include = ["src"]
pythonVersion = "3.11"
